# geonames-fastapi

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py  setup.py
geonames_fastapi/app/: dependencies.py  main.py  models.py
