[tool.poetry]
name = "geonames_fastapi"
version = "0.1.0"
description = "FastAPI powered API for python-geonames"
authors = ["Aareon Sullivan <askully@amazon.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
python-multipart = "^0.0.6"
pydantic = "^2.3.0"
geonames = { git = "https://github.com/Aareon/python-geonames.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
